--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,2 +1,43 @@
-<h1>Admin::Products#new</h1>
-<p>Find me in app/views/admin/products/new.html.erb</p>
+<div class="container">
+ <div class="row">
+　<div class="col-sm-5 mx-auto">
+　<h2>新規商品登録</h2>
+  <%= form_with model: @product,url: 'admin/products',method: :post do |f| %>
+   
+   <%= f.label :商品画像 %>
+   
+   <%= f.file_field :image, class: "form-control-file" %>
+   
+   <div class="form-group">
+   <%= f.label :商品名 %>
+   <%= f.text_field :name, class: "form-control name" %>
+   </div>
+
+  <div class="form-group">
+   <%= f.label :商品説明 %>
+   <%= f.text_area :description, class: "form-control description " %>
+   </div>
+
+  <div class="form-group">
+   <%= f.label :税抜価格　%>
+   <%= f.text_field :non_taxed_price %>円
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :商品ジャンル %>
+    <%= f.select :genre_id, [["ケーキ", "1"], ["プリン", "2"]], include_blank: "選択して下さい" %>
+  </div>
+  
+  <div class="form-group">
+   <%= f.label :販売ステータス %>
+  </div>
+  
+  <div class="text-center">
+     <%= f.submit "新規登録", class: "btn btn-lg btn-success" %>
+  </div>
+
+  <% end %>
+  
+  </div>
+ </div>
+</div>
