--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <table class="table table-borderless">
+        <thead class="thead-light">
+          <tr>
+            <th>ジャンル編集</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>ジャンル名</td>
+            <td>
+              <%= form_with model: @genre, url: admin_genre_path do |f| %>
+                <%= f.text_field :name %>
+                <%= f.submit '変更を保存' %>
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
