--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,45 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <table class="table table-borderless">
+        <thead class="thead-light">
+          <tr>
+            <th>ジャンル一覧・追加</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>ジャンル名</td>
+            <td>
+              <%= form_with model: @genre, url: admin_genres_path do |f| %>
+                <%= f.text_field :name %>
+                <%= f.submit '新規登録' %>
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <table class="table table-hover table-inverse">
+        <thead class="thead-light">
+          <tr>
+            <th>ジャンル</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+            <tr>
+              <td><%= genre.name %></td>
+              <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-sm btn-success" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
