--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,74 @@
   </head>
 
   <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+          <a class="navbar-brand"><span>Nagano Cake</span></a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNavDropdown" style="">
+              <ul class="navbar-nav ml-auto">
+              <% if end_user_signed_in? %>
+                <li>
+                  <%= link_to destroy_end_user_session_path, method: :delete, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">ログアウト</button>
+                  <% end %>
+                </li>
+              <% elsif admin_signed_in? %>
+                <li>
+                  <%= link_to admin_products_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">商品一覧</button>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_end_users_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">会員一覧</button>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_orders_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">注文履歴一覧</button>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_genres_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">ジャンル一覧</button>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">ログアウト</button>
+                  <% end %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to homes_about_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">About</button>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to products_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">商品一覧</button>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_end_user_registration_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">新規登録</button>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_end_user_session_path, class: "nav-link text-light" do %>
+                    <button type="button" class="btn btn-outline-light btn-sm">ログイン</button>
+                  <% end %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
     <%= yield %>
   </body>
 </html>
