--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Products#index</h1>
-<p>Find me in app/views/admin/products/index.html.erb</p>
+<h2>商品一覧</h2>
+<div class="table">
+ <thead>
+  <tr>
+   <th>商品ID</th>
+   <th>商品名</th>
+   <th>税抜価格</th>
+   <th>ジャンル</th>
+   <th></th>
+  </tr>
+ </thead>
+ <tbody>
+  <% @products.each do |product| %>
+  <tr>
+   <td><%= product.id %></td>
+   <td><%= product.name %></td>
+   <td><%= product.non_taxed_price %></td>
+   <td></td>
+  </tr>
+  <% end %>
+ </tbody>
+</div>
