--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -2,7 +2,7 @@
  <div class="row">
 　<div class="col-sm-5 mx-auto">
 　<h2>新規商品登録</h2>
-  <%= form_with model: @product,url: 'admin/products',method: :post do |f| %>
+  <%= form_with model: @product, url:admin_products_path, method: :post do |f| %>
    
    <%= f.label :商品画像 %>
    
@@ -24,8 +24,13 @@
   </div>
   
   <div class="form-group">
-    <%= f.label :商品ジャンル %>
-    <%= f.select :genre_id, [["ケーキ", "1"], ["プリン", "2"]], include_blank: "選択して下さい" %>
+   <%= f.label :ジャンル %>
+   <%= f.collection_select :genre_id,@genres,:id,:name,prompt: "選択してください" %>
+  </div>
+  
+  <div class="form-group">
+   <%= f.label :販売ステータス %>
+   
   </div>
   
   <div class="text-center">
