--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,2 +1,50 @@
-<h1>Admin::Products#edit</h1>
-<p>Find me in app/views/admin/products/edit.html.erb</p>
+<h2>商品編集</h2>
+ 
+ <%= form_with model: @product, url:admin_product_path, method: :patch do |f| %>
+ 
+<div class="container">
+ <div class="row">
+　<div class="col-sm-5 mx-auto">
+   
+   <%= f.label :商品画像 %>
+   
+   <%= f.file_field :image, class: "form-control-file" %>
+   
+   <div class="form-group">
+   <%= f.label :商品名 %>
+   <%= f.text_field :name, class: "form-control name" %>
+   </div>
+
+  <div class="form-group">
+   <%= f.label :商品説明 %>
+   <%= f.text_area :description, class: "form-control description " %>
+   </div>
+
+  <div class="form-group">
+   <%= f.label :税抜価格　%>
+   <%= f.text_field :non_taxed_price %>円
+  </div>
+  
+  <div class="form-group">
+   <%= f.label :ジャンル %>
+   <%= f.collection_select :genre_id,@genres,:id,:name,prompt: "選択してください" %>
+  </div>
+  
+  <div class="form-group">
+   <%= f.label :販売ステータス %>
+   <%= f.radio_button :is_active, :true %>
+   <%= f.label :is_active, "販売中" %>
+   <%= f.radio_button :is_active, :false %>
+   <%= f.label :is_active, "販売停止中" %>
+  </div>
+  
+  
+  </div>
+ </div>
+</div>
+  
+  <div class="text-center">
+   <%= button_to "変更を保存", admin_product_path, method: :patch, class: "btn btn-lg btn-success" %>
+  </div>
+  
+  <% end %>
