--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,6 @@
 <h2>商品一覧</h2> 
 <%= link_to new_admin_product_path, class: "btn btn-secondary", method: :get do %>
- <i class="fa-solid fa-circle-plus"></i>
+ <i class="fas fa-plus-circle"></i>
 <% end %>
 <table class="table">
  <thead>
