--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Public::Products#index</h1>
-<p>Find me in app/views/public/products/index.html.erb</p>
+<h2>商品一覧</h2>
+ 
+<% @products.each do |product| %>
+ <div class="d-inline-block ml-4 mb-3">
+ <%= link_to product_path(product.id) do  %>
+  <% if product.image.attached? %>
+   <%= image_tag product.image, size: "200x150" %>
+ <% else %>
+   <%= image_tag 'no_image', size: "200x150" %>
+  <% end %>
+ <% end %>
+  <h6><%= product.name %></h6>
+  <h6><%= product.add_tax_price %>円</h6>
+ </div>
+ <% end %>
+ <div class="d-flex justify-content-center">
+ <%= paginate @products %>
+ </div>
+
+ 
