--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -1,2 +1,17 @@
-<h1>Public::Products#show</h1>
-<p>Find me in app/views/public/products/show.html.erb</p>
+<div class="container">
+ <div class="row">
+   <div class="col-sm-4 offset-1 mt-5">
+  <% if @product.image.attached? %>
+   <%= image_tag @product.image, size: "200x150" %>
+  <% else %>
+   <%= image_tag 'no_image', size: "200x150" %>
+  <% end %>
+   </div>
+   <div class="col-sm-4 mt-5">
+    <h3><%= @product.name %></h3>
+    <span><%= @product.description %></span>
+    <h4 class="mt-1">￥<%= @product.add_tax_price %>(税込)</h4>
+   
+  
+ </div>
+</div>
