--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+ <h3>配送先編集</h3>
+  <%= form_with model: @address do |f| %>
+    <h4>郵便番号</h4>
+      <%= f.text_field :postcode %>
+    <h4>住所</h4>
+      <%= f.text_field :address %>
+    <h4>宛名</h4>
+      <%= f.text_field :name %>
+    <%= f.submit '編集内容を保存', class: "btn btn-success" %>
+  <% end %>
