--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -14,12 +14,12 @@
           </tr>
         </thead>
         <tbody>
-          <%= @end_users.each do |e| %>
+          <% @end_users.each do |e| %>
           <tr>
             <td><%= e.id %></td>
-            <td><%= e.name %></td>
+            <td><%= link_to e.last_name+e.first_name, admin_end_user_path(e.id) %></td>
             <td><%= e.email %></td>
-            <td><%= e.%></td>
+            <td><%= e.is_deleted ? '退会' : '有効' %></td>
           </tr>
           <% end %>
         </tbody>
