--- a/app/views/public/in_cart_products/index.html.erb
+++ b/app/views/public/in_cart_products/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::InCartProducts#index</h1>
-<p>Find me in app/views/public/in_cart_products/index.html.erb</p>
+<h2>ショッピングカート</h2>
+<% @in_cart_products.each do |in_cart_product| %>
+
+ <%= image_tag in_cart_product.product.image, size: "60x40" %>
+ <%= in_cart_product.product.name %>
+ <%= in_cart_product.quantity %>
+ <%= in_cart_product.product.add_tax_price %>
+
+<% end %>
