--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -8,10 +8,15 @@
   <% end %>
    </div>
    <div class="col-sm-4 mt-5">
-    <h3><%= @product.name %></h3>
-    <span><%= @product.description %></span>
-    <h4 class="mt-1">￥<%= @product.add_tax_price %>(税込)</h4>
-   
+    <%= form_with model: @in_cart_product, url:in_cart_products_path, method: :post do |f| %>
+     <%= f.hidden_field :product_id, :value => @product.id %>
+     <h3><%= @product.name %></h3>
+     <p><%= @product.description %></p>
+     <h4>￥<%= @product.add_tax_price %>（税込）</h4>
   
- </div>
+  <%= f.select :quantity,*[1..9], prompt: "選択してください" %>
+  <%= f.submit "カートに入れる" %> 
+  　<% end %>
+   </div>
+  </div>
 </div>
