--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::EndUsers#show</h1>
-<p>Find me in app/views/public/end_users/show.html.erb</p>
+<h3>マイページ</h3>
+  <%= link_to "編集する", edit_end_user_path()
