--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,11 +1,15 @@
-<h2>商品一覧</h2> 
-<div class="float-right">
+<div class="container">
+ <div class="row">
+  <div class="col-sm-10">
+
+<h2 class="mt-2">商品一覧</h2> 
+<div class="float-right mb-3">
 <%= link_to new_admin_product_path, class: "btn btn-secondary", method: :get do %>
  <i class="fas fa-plus-circle"></i>
 <% end %>
 </div>
 <table class="table">
- <thead>
+ <thead class="table-light">
   <tr>
    <th>商品ID</th>
    <th>商品名</th>
@@ -29,3 +33,6 @@
  <div class="d-flex justify-content-center">
   <%= paginate @products %>
  </div>
+  </div>
+ </div>
+</div>
