--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -6,5 +6,7 @@
       また、全国へ発送可能ですので、「いつ」でも「どこ」でもご注文いただけます。<br>
       ぜひご注文ください。
   </h4>
+  
+  <%= image_tag 'no_image.jpg', size: "600x250" %>
 
 </div>
