--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,4 +1,4 @@
-<h2>商品一覧</h2>
+<h2>商品一覧(全<%= @total_products.count %>件)</h2>
  
 <% @products.each do |product| %>
  <div class="d-inline-block ml-4 mb-3">
