--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,25 +1,38 @@
 <div class="container">
  <div class="row">
   <div class="col-sm-4">
- <h2>商品詳細</h2>
+ <h2 class="mb-4">商品詳細</h2>
  <% if @product.image.attached? %>
- <%= image_tag @product.image,size:"200x200" %>
+ <%= image_tag @product.image,size:"250x170" %>
  <% else %>
- <%= image_tag 'no_image',size:'200x200' %>
+ <%= image_tag 'no_image',size:'200x170' %>
  <% end %>
   </div>
-  <div class="col-sm-8">
-    <p>商品名:<%= @product.name %></p>
-    <p>商品説明:<%= @product.description %></p>
-    <p>ジャンル:<%= @product.genre.name %></p>
-    <p>税込価格:<%= @product.add_tax_price.to_s(:dalimited) %>円（税抜価格:<%= @product.non_taxed_price %>円）</p>
-    <p>販売ステータス:<%= @product.is_active ? '販売中' : '販売停止中' %></p>
+  <div class="col-sm-6">
+   <table class="table table-borderless">
+    <tbody>
+     <tr>
+      <th scope="row">商品名</th>
+      <td><%= @product.name %></td>
+     </tr>
+     <tr>
+      <th scope="row">ジャンル</th>
+      <td><%= @product.genre.name %></td>
+     </tr>
+     <tr>
+      <th scope="row">税込価格</th>
+       <td><%= @product.add_tax_price.to_s(:dalimited) %>円(税抜価格:<%= @product.non_taxed_price %>円)</td>
+     </tr>
+     <tr>
+      <th scope="row">販売ステータス</th>
+       <td><%= @product.is_active ? '販売中' : '販売停止中' %></td>
+     </tr>
+    </tbody>
+   </table>
   </div>
-  </div>
-  
-   <div class="text-center">
-   <%= button_to "編集する",  edit_admin_product_path(@product.id),method: :get, class: "btn btn-lg btn-success" %>
-   </div>
  </div>
+</div>
+<div class="text-center">
+ <%= button_to "編集する",  edit_admin_product_path(@product.id),method: :get, class: "btn btn-lg btn-success" %>
 </div>
 
