--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-15">
+      <%= form_with model: @order, url: order_comfirm_path, locale: true do |f| %>
       <table class="table table-borderless">
         <thead class="thead-light">
           <tr>
@@ -12,30 +13,27 @@
             <td>支払方法</td>
           </tr>
           <tr>
-          <%= form_with model: Order.new, locale: true do |f| %>
-            <td><%= f.radio_button :payment_method, 0 %>
-                <%= f.label :payment_method, :クレジットカード, checked: true %>
+            <td><%= f.radio_button :payment_method, :credit_card %>
+                <%= f.label :payment_method, "クレジットカード", checked: true %>
             </td>
-            <td><%= f.radio_button :payment_method, 1 %>
-                <%= f.label :payment_method, :銀行振込, checked: true %>
+            <td><%= f.radio_button :payment_method, :transfer %>
+                <%= f.label :payment_method, "銀行振込", checked: true %>
             </td>
           </tr>
-            <%= form_with model: @address do |f| %>
             <tr>
               <td>お届け先</td>
             <tr>
-              <td><%= f.radio_button :erabu_address, :ご自身の住所 %></td>
-              <td><%= f.label :erabu_address, :ご自身の住所, checked: true %></td>
+              <td><%= f.radio_button :select_address, 0 %></td>
+              <td><%= f.label :select_address, :ご自身の住所, checked: true %></td>
               <td><%= @user.address %></td>
             </tr>
             <tr>
-              <td><%= f.radio_button :erabu_address, :登録済住所から選択 %></td>
-              <td><%= f.label :erabu_address, :登録済住所から選択, checked: true %></td>
-              <td><%= f.select :address_id, options_from_collection_for_select.to_s(Address.all, :id, :full_address) %></td>
+              <td><%= f.radio_button :select_address, 1 %></td>
+              <td><%= f.label :select_address, :登録済住所から選択, checked: true %></td>
+              <td><%= f.select :address_id, options_from_collection_for_select(current_end_user.addresses, :id, :full_address) %></td>
             </tr>
-
             <tr>
-              <td><%= f.radio_button :erabu_address, :新しいお届け先 %></td>
+              <td><%= f.radio_button :select_address, 2 %></td>
               <td>郵便番号(ハイフンなし)
                 <td><%= f.text_field :postcode %></td>
               </td>
@@ -49,12 +47,10 @@
             <tr>
               <td><%= f.submit "確認画面に進む" %></td>
             </tr>
-            <% end %>
           </tr>
-          <% end %>
         </tbody>
       </table>
-
+      <% end %>
     </div>
   </div>
 </div>
