--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -1,2 +1,46 @@
-<h1>Public::EndUsers#edit</h1>
-<p>Find me in app/views/public/end_users/edit.html.erb</p>
+<div class="row">
+  <div class="col-md-5">
+    <table class="table table-borderless">
+      <thead class="thead-light">
+          <tr>
+            <h3>会員情報編集</h3>
+          </tr>
+        </thead>
+        <%= form_with model: @end_user do |f| %>
+        <tbody>
+          <tr>
+            <td>氏名</td>
+            <td><%=  f.text_field :last_name %> <%= f.text_field :first_name %></td>
+          </tr>
+          <tr>
+            <td>フリガナ</td>
+            <td><%=  f.text_field :last_name_kana %> <%=  f.text_field :first_name_kana %></td>
+          </tr>
+          <tr>
+            <td>郵便番号</td>
+            <td><%=  f.text_field :postcode %></td>
+          </tr>
+          <tr>
+            <td>住所</td>
+            <td><%=  f.text_field :address %></td>
+          </tr>
+          <tr>
+            <td>電話番号</td>
+            <td><%=  f.text_field :phone_number %></td>
+          </tr>
+          <tr>
+            <td>メールアドレス</td>
+            <td><%=  f.text_field :email %></td>
+          </tr>
+          <tr>
+            <td><%= f.submit '保存', class: "btn btn-success" %></td>
+            <td><%= link_to "退会する", end_users_unsubcribe_path, class: "btn btn-danger" %></td>
+          </tr>
+        <% end %>
+        </tbody>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
