--- a/app/views/public/in_cart_products/index.html.erb
+++ b/app/views/public/in_cart_products/index.html.erb
@@ -24,7 +24,7 @@
         <%= f.submit "変更", class: "btn btn-success" %>
         <% end %>
     </td>
-   
+
     <td><%= in_cart_product.subtotal %></td>
         <% @sum += in_cart_product.subtotal %>
     <td><%= button_to "削除する", in_cart_product_path(in_cart_product.id), method: :delete, class: "btn btn-danger" %></td>
@@ -41,6 +41,9 @@
    <th class="table-secondary">合計金額</th>
    <td><%= @sum %></td>
    </tr>
+   <tr>
+    <td><%= link_to "情報入力に進む", new_order_path %></td>
+   </tr>
   </tbody>
   </table>
   </div>
@@ -48,10 +51,10 @@
 　</div>
  </div>
 </div>
-  
-   
- 
- 
- 
+
+
+
+
+
 
 
