--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-15">
-      <%= form_with model: @order, url: order_comfirm_path, locale: true do |f| %>
+      <%= form_with model: @order, url: order_comfirm_path, local: true do |f| %>
       <table class="table table-borderless">
         <thead class="thead-light">
           <tr>
