--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,44 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-10 mx-auto">
+   <div class="text-center">
+    <div class="main-image">
+    <div class="bg-light bg-opacity-10">
+    <p>ようこそ、ながのCAKEへ！<br>
+        このサイトはケーキ販売のECサイトになります。<br>
+    　　会員でない方も商品の閲覧はできますが、<br>
+    　　購入には会員登録が必要になります。</p>
+    </div>
+    </div>
+    <div class="text-left mt-5">
+    <h3>新着商品</h3>
+    <div class="d-flex flex-row ml-3">
+    <% @product.each do |product| %>
+    <%= link_to product_path(product.id) do %>
+    <%= image_tag product.image, size: "200x150" %>
+    <h5><%= product.name %><br>
+    <%= product.add_tax_price %>円</h4>
+    <% end %>
+    <% end %>
+    </div>
+    </div>
+   </div>
+    <div class="text-right">
+    <%= link_to products_path do %>
+    すべての商品を見る>>
+    <% end %>
+ </div>
+  </div>
+ </div>
+</div> 
+
+<style>
+ .main-image{
+ background-image: url("<%= asset_path('case.jpg') %>");
+ height: 400px;
+ background-position: center;
+ background-size: cover;
+ }
+</style>
+
+  
