--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,11 +1,40 @@
-<div class="row">
-  <div class="col-md-5">
-    <table class="table table-borderless">
-      <thead class="thead-light">
+<div class="container">
+  <div class="row">
+    <div class="col-md-15">
+      <table class="table table-borderless">
+        <thead class="thead-light">
           <tr>
-            <h3>注文履歴一覧</h3>
+            <th>注文履歴一覧</th>
+          </tr>
+        </thead>
+        <% @orders.each do |o| %>
+        <tbody>
+          <tr>
+            <td>注文日</td>
+            <td><%= o.created_at %></td>
+          </tr>
+          <tr>
+            <td>配送先</td>
+            <td><%= o.postcode %><%= o.address %><%= o.name %></td>
+          </tr>
+          <tr>
+            <td>注文商品</td>
+            <td><%= InCartProduct.all %></td>
+          </tr>
+          <tr>
+            <td>支払金額</td>
+            <td><%= o.bill %></td>
+          </tr>
+          <tr>
+            <td>ステータス</td>
+            <td><%= o.order_status_i18n %></td>
+          </tr>
+          <tr>
+            <td>注文詳細</td>
+            <td></td>
           </tr>
         </tbody>
+        <% end %>
       </table>
     </div>
   </div>
