--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -9,7 +9,7 @@
         <th>注文ステータス</th>
       </tr>
       <tbody>
-        <%= @orders.each do |o| %>
+        <% @orders.each do |o| %>
         <tr>
           <td>
             <%= link_to admin_order_path do %>
