--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -12,13 +12,13 @@
         <% @orders.each do |o| %>
         <tr>
           <td>
-            <%= link_to admin_order_path do %>
+            <%= link_to admin_order_path(o) do %>
               <%= o.created_at.strftime("%Y/%m/%d %H:%M:%S") %>
             <% end %>
           </td>
           <td><%= o.name %></td>
-          <td><%= o.quantity %></td>
-          <td><%= o.order_status %></td>
+          <td><%= o.order_details.sum(:quantity) %></td>
+          <td><%= o.order_status_i18n %></td>
         </tr>
         <% end %>
       </tbody>
