--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -3,7 +3,6 @@
   <table>
     <thead>
       <tr>
-      <%= form_with model: @order, url: admin_order_path, method: :patch do |o| %>
         <th><b>購入者</b></th>
         <td><%= @order.name %></td>
         </tr>
@@ -26,11 +25,42 @@
         <tr>
           <th><b>注文ステータス</b></th>
           <td>
-            <%= o.select :order_status, Order.order_statuses_i18n.keys, class: "order_status" %>
+          <%= form_with model: @order, url: admin_order_path, method: :patch do |o| %>
+            <%= o.select :order_status, Order.order_statuses.keys.map{|k| [I18n.t("enums.order.order_status.#{k}"), k]},class: "form-control"%>
             <%= o.submit "更新" , class: "btn btn-outline-success" %>
           <% end %>
           </td>
         </tr>
+        <tr>
+          <th><b>商品名</b></th>
+          <th><b>単価(税込)</b></th>
+          <th><b>数量</b></th>
+          <th><b>小計</b></th>
+          <th><b>製作ステータス</b></th>
+        </tr>
+        <% @order.order_details.each do |o| %>
+          <tr>
+            <td><p><%= o.product.name %></p></td>
+            <td><p><%= o.tax_price %></p></td>
+            <td><p><%= o.quantity %></p></td>
+            <td><p><%= o.tax_price*o.quantity %></p></td>
+            <td>
+              <%= form_with model: @order_details, url: admin_order_detail_path, method: :patch do |o|%>
+                <%= o.select :production_status, OrderDetail.production_statuses.keys.map{|k| [I18n.t("enums.order_detail.production_status.#{k}"), k]},class: "form-control"%>
+                <%= o.submit "更新", class:"btn btn-success"%>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+        <tr>
+          <th>商品合計</th>
+          <td><%= @order.bill-@order.shipping_fee %></td>
+          <th>送料</th>
+          <td><%= @order.shipping_fee %>
+          <th>請求金額合計</th>
+          <td><%= @order.bill %></td>
+        </tr>
+        
     </thead>
   </table>
 </div>
