--- a/app/views/public/in_cart_products/index.html.erb
+++ b/app/views/public/in_cart_products/index.html.erb
@@ -41,9 +41,6 @@
    <th class="table-secondary">合計金額</th>
    <td><%= @sum %></td>
    </tr>
-   <tr>
-    <td><%= link_to "情報入力に進む", new_order_path %></td>
-   </tr>
   </tbody>
   </table>
   </div>
@@ -51,7 +48,9 @@
 　</div>
  </div>
 </div>
-
+<div class="d-flex align-items-center justify-content-center" >
+ <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
+</div>
 
 
 
