--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,40 +1,34 @@
-<div class="container">
+<div class="d-flex align-items-center justify-content-center container">
   <div class="row">
     <div class="col-md-15">
-      <table class="table table-borderless">
-        <thead class="thead-light">
+      <table class="table table-border">
+        <div align="center">注文履歴一覧</div>
+        <thead>
           <tr>
-            <th>注文履歴一覧</th>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払金額</th>
+            <th>ステータス</th>
+            <th></th>
           </tr>
         </thead>
         <% @orders.each do |o| %>
         <tbody>
           <tr>
-            <td>注文日</td>
             <td><%= o.created_at %></td>
-          </tr>
-          <tr>
-            <td>配送先</td>
-            <td>〒<%= o.postcode %></td>
-            <td><%= o.address %></td>
-            <td><%= o.name %></td>
-          </tr>
-          <tr>
-            <td>注文商品</td>
+            <td>
+              <p>〒<%= o.postcode %></p>
+              <p><%= o.address %></p>
+              <p><%= o.name %></p>
+            </td>
+            <td>
             <% o.order_details.each do |o| %>
-            <td><%= o.product.name %></td>
+              <p><%= o.product.name %></p>
             <%end%>
-          </tr>
-          <tr>
-            <td>支払金額</td>
+            </td>
             <td><%= o.bill %></td>
-          </tr>
-          <tr>
-            <td>ステータス</td>
             <td><%= o.order_status_i18n %></td>
-          </tr>
-          <tr>
-            <td>注文詳細</td>
             <td><%= link_to "注文詳細", order_path(o.id) %></td>
           </tr>
         </tbody>
