--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,14 +1,14 @@
+<div class="d-flex align-items-center justify-content-center">
+  <h3>注文履歴詳細</h3>
+</div>
 <div class="container">
   <div class="row">
     <div class="col-md-15">
       <table class="table table-borderless">
         <thead class="thead-light">
           <tr>
-            <th>注文履歴詳細</th>
+            <th>注文情報</th>
           </tr>
-        </thead>
-        <thead>
-          <tr><th>注文情報</th></tr>
         </thead>
         <tbody>
           <tr>
@@ -17,9 +17,11 @@
           </tr>
           <tr>
             <td>配送先</td>
-            <td>〒<%= @order.postcode %></td>
-            <td><%= @order.address%></td>
-            <td><%= @order.name %></td>
+            <td>
+            〒<%= @order.postcode %>
+            <%= @order.address%>
+            <%= @order.name %>
+            </td>
           </tr>
           <tr>
             <td>支払金額</td>
@@ -31,7 +33,9 @@
           </tr>
         </tbody>
         <thead>
-          <tr><th>注文内容</th></tr>
+          <tr>
+            <th>注文内容</th>
+          </tr>
         </thead>
         <tbody>
           <tr>
