--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,4 +1,7 @@
-<h2>商品一覧</h2> 
+<div class="container">
+ <div class="row">
+  <div class="col-sm-10 mx-auto">
+ <h2 class="mt-3"><span class="bg-light">商品一覧</span></h2>
 <div class="float-right">
 <%= link_to new_admin_product_path, class: "btn btn-secondary", method: :get do %>
  <i class="fas fa-plus-circle"></i>
@@ -28,4 +31,7 @@
  </table>
  <div class="d-flex justify-content-center">
   <%= paginate @products %>
+ </div>
+   </div>
+  </div>
  </div>
