--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
  <div class="row">
   <div class="col-sm-4">
- <h2 class="mb-4">商品詳細</h2>
+ <h2 class="mt-3"><span class="bg-light">商品詳細</span></h2>
  <% if @product.image.attached? %>
  <%= image_tag @product.image,size:"250x170" %>
  <% else %>
- <%= image_tag 'no_image',size:'200x170' %>
+ <%= image_tag 'no_image',size:'250x170' %>
  <% end %>
   </div>
   <div class="col-sm-6">
-   <table class="table table-borderless">
+   <table class="table table-borderless mt-5">
     <tbody>
      <tr>
       <th scope="row">商品名</th>
