--- a/app/views/public/in_cart_products/index.html.erb
+++ b/app/views/public/in_cart_products/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
  <div class="row">
-  <div class="col-sm-10 mx-auto">
-<h2>ショッピングカート</h2>
+  <div class="col-sm-10 mx-auto mt-3">
+<h2><span class="bg-light">ショッピングカート</span></h2>
  <%= button_to "カートを空にする",'/in_cart_products',method: :delete, class: "btn btn-danger float-right mb-2" %>
  <table class="table table-bordered border-dark">
   <thead class="table-secondary">
