--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+ <div class="row">
+  <div class="col-sm-10 mx-auto">
 <h2>商品一覧(全<%= @total_products.count %>件)</h2>
  
 <% @products.each do |product| %>
@@ -17,4 +20,6 @@
  <%= paginate @products %>
  </div>
 
- 
+   </div>
+  </div>
+ </div>
