--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -2,12 +2,12 @@
  <div class="row">
    <div class="col-sm-4 offset-1 mt-5">
   <% if @product.image.attached? %>
-   <%= image_tag @product.image, size: "200x150" %>
+   <%= image_tag @product.image, size: "250x170" %>
   <% else %>
-   <%= image_tag 'no_image', size: "200x150" %>
+   <%= image_tag 'no_image', size: "250x170" %>
   <% end %>
    </div>
-   <div class="col-sm-4 mt-5">
+   <div class="col-sm-6 mt-5">
     <%= form_with model: @in_cart_product, url:in_cart_products_path, method: :post do |f| %>
      <%= f.hidden_field :product_id, :value => @product.id %>
      <h3><%= @product.name %></h3>
@@ -15,7 +15,7 @@
      <h4>￥<%= @product.add_tax_price %>（税込）</h4>
   
   <%= f.select :quantity,*[1..9], prompt: "選択してください" %>
-  <%= f.submit "カートに入れる" %> 
+  <%= f.submit "カートに入れる", class: "btn btn-success ml-3" %> 
   　<% end %>
    </div>
   </div>
