--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -13,7 +13,7 @@
             <td>
               <%= form_with model: @genre, url: admin_genre_path do |f| %>
                 <%= f.text_field :name %>
-                <%= f.submit '変更を保存' %>
+                <%= f.submit '変更を保存', class: "btn btn-success ml-3" %>
               <% end %>
             </td>
           </tr>
