--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -13,7 +13,7 @@
             <td>
               <%= form_with model: @genre, url: admin_genres_path do |f| %>
                 <%= f.text_field :name %>
-                <%= f.submit '新規登録' %>
+                <%= f.submit '新規登録', class: "btn btn-success ml-3" %>
               <% end %>
             </td>
           </tr>
