--- a/app/views/admin/end_users/edit.html.erb
+++ b/app/views/admin/end_users/edit.html.erb
@@ -1,46 +1,42 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-8 offset-1 mt-3">
+      <h2><span class="bg-light"><%= @end_user.last_name+@end_user.first_name %>さんの会員情報編集</span></h2>
       <%= form_with model: @end_user, url: admin_end_user_path do |f| %>
       <table class="table table-borderless">
-        <thead class="thead-light">
-          <tr>
-            <th><%= @end_user.last_name+@end_user.first_name %>さんの会員情報編集</th>
-          </tr>
-        </thead>
         <tbody>
           <tr>
-            <td>会員ID</td>
+            <th>会員ID</th>
             <td><%= @end_user.id %></td>
           </tr>
           <tr>
-            <td>氏名</td>
+            <th>氏名</th>
             <td><%= f.text_field :last_name %></td>
             <td><%= f.text_field :first_name %></td>
           </tr>
           <tr>
-            <td>フリガナ</td>
+            <th>フリガナ</th>
             <td><%= f.text_field :last_name_kana %></td>
             <td><%= f.text_field :first_name_kana %></td>
           </tr>
           <tr>
-            <td>郵便番号</td>
+            <th>郵便番号</th>
             <td><%= f.text_field :postcode %></td>
           </tr>
           <tr>
-            <td>住所</td>
+            <th>住所</th>
             <td><%= f.text_field :address %></td>
           </tr>
           <tr>
-            <td>電話番号</td>
+            <th>電話番号</th>
             <td><%= f.text_field :phone_number %></td>
           </tr>
           <tr>
-            <td>メールアドレス</td>
+            <th>メールアドレス</th>
             <td><%= f.text_field :email %></td>
           </tr>
           <tr>
-            <td>会員ステータス</td>
+            <th>会員ステータス</th>
             <%= form_with(model: @end_user, local: true) do |f| %>
             <td>
               <%= f.radio_button :is_deleted, false %>
@@ -51,7 +47,8 @@
             <% end %>
           </tr>
           <tr>
-            <td><%=f.submit "変更を保存" %></td>
+            <th></th>
+            <td><%=f.submit "変更を保存", class: "btn btn-success" %></td>
           </tr>
         </tbody>
       </table>
