--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -1,11 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
-      <table class="table table-borderless">
-        <thead class="thead-light">
-          <tr>
-            <th>会員一覧</th>
-          </tr>
+    <div class="col-md-10 mx-auto mt-3">
+      <h2><span class="bg-light">会員一覧</span></h2>
+      <table class="table mt-3">
+        <thead class="table-light">
           <tr>
             <th>会員ID</th>
             <th>氏名</th>
