--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-  <h2>注文履歴一覧</h2>
-  <table>
-    <thead>
+ <div class="row">
+  <div class="col-sm-10 mx-auto mt-3">
+  <h2><span class="bg-light">注文履歴一覧</span></h2>
+  <table class="table mt-3">
+    <thead class="table-light">
       <tr>
         <th>注文日時</th>
         <th>購入者</th>
@@ -25,4 +27,6 @@
     </thead>
   </table>
   <%= paginate @orders %>
+  </div>
+ </div>
 </div>
