--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,1 +1,3 @@
-ご注文ありがとうございました
+<div class="d-flex align-items-center justify-content-center" style="height :300px">
+<h2>ご注文ありがとうございました!</h2>
+</div>
